--- a/b2/39p-PCA,iconomic.ipynb
+++ b/b2/39p-PCA,iconomic.ipynb
@@ -3,7 +3,7 @@
   {
    "cell_type": "code",
    "execution_count": 6,
-   "id": "73f9bbeb",
+   "id": "19ce7e98",
    "metadata": {},
    "outputs": [
     {
@@ -34,7 +34,7 @@
   {
    "cell_type": "code",
    "execution_count": 5,
-   "id": "6073a7d2",
+   "id": "e9c402e8",
    "metadata": {},
    "outputs": [
     {
@@ -65,7 +65,7 @@
   {
    "cell_type": "code",
    "execution_count": 8,
-   "id": "f5fc45de",
+   "id": "c187e59a",
    "metadata": {},
    "outputs": [
     {
@@ -96,7 +96,7 @@
   {
    "cell_type": "code",
    "execution_count": 9,
-   "id": "83d41cd3",
+   "id": "39548286",
    "metadata": {},
    "outputs": [
     {
@@ -127,7 +127,7 @@
   {
    "cell_type": "code",
    "execution_count": 10,
-   "id": "a6c75297",
+   "id": "4db827e8",
    "metadata": {},
    "outputs": [
     {
@@ -158,7 +158,7 @@
   {
    "cell_type": "code",
    "execution_count": 11,
-   "id": "baf82c01",
+   "id": "91dc4120",
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
   {
    "cell_type": "code",
    "execution_count": 12,
-   "id": "5129a681",
+   "id": "58a5e8d6",
    "metadata": {},
    "outputs": [
     {
@@ -220,7 +220,7 @@
   {
    "cell_type": "code",
    "execution_count": 14,
-   "id": "562ff3ab",
+   "id": "f4d15595",
    "metadata": {},
    "outputs": [
     {
@@ -251,7 +251,7 @@
   {
    "cell_type": "code",
    "execution_count": 15,
-   "id": "7aab2c3a",
+   "id": "a2ca5dfa",
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
   {
    "cell_type": "code",
    "execution_count": 16,
-   "id": "69e6fac9",
+   "id": "37b39a33",
    "metadata": {},
    "outputs": [
     {
@@ -313,7 +313,7 @@
   {
    "cell_type": "code",
    "execution_count": 17,
-   "id": "6e6fbb83",
+   "id": "0e5175bf",
    "metadata": {},
    "outputs": [
     {
@@ -344,7 +344,7 @@
   {
    "cell_type": "code",
    "execution_count": 18,
-   "id": "b031197c",
+   "id": "6b003b10",
    "metadata": {},
    "outputs": [
     {
@@ -375,7 +375,7 @@
   {
    "cell_type": "code",
    "execution_count": 20,
-   "id": "85f7d233",
+   "id": "838c9b4e",
    "metadata": {},
    "outputs": [
     {
@@ -406,7 +406,7 @@
   {
    "cell_type": "code",
    "execution_count": 22,
-   "id": "57646d37",
+   "id": "013d629a",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -417,7 +417,7 @@
   {
    "cell_type": "code",
    "execution_count": 45,
-   "id": "b28029da",
+   "id": "2ec2339b",
    "metadata": {},
    "outputs": [
     {
@@ -605,7 +605,7 @@
   {
    "cell_type": "code",
    "execution_count": 46,
-   "id": "b94e801a",
+   "id": "28b978d8",
    "metadata": {},
    "outputs": [
     {
@@ -715,7 +715,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "8143c7a9",
+   "id": "33e553ae",
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "3e8f4678",
+   "id": "174ca141",
    "metadata": {},
    "outputs": [
     {
@@ -939,7 +939,7 @@
   {
    "cell_type": "code",
    "execution_count": 49,
-   "id": "92d4d6fb",
+   "id": "0233eda6",
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1005,7 @@
   {
    "cell_type": "code",
    "execution_count": 50,
-   "id": "7b7d5f03",
+   "id": "289b9e7c",
    "metadata": {},
    "outputs": [
     {
@@ -1071,7 +1071,7 @@
   {
    "cell_type": "code",
    "execution_count": 51,
-   "id": "e19988c8",
+   "id": "8bcf0e60",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1081,7 +1081,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "1154292a",
+   "id": "4289df01",
    "metadata": {},
    "outputs": [
     {
@@ -1112,7 +1112,7 @@
   {
    "cell_type": "code",
    "execution_count": 53,
-   "id": "d4496a49",
+   "id": "5c10a8ac",
    "metadata": {},
    "outputs": [
     {
@@ -1138,7 +1138,162 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "28630ef4",
+   "outputs": [],
+   "source": [
+    "pca$loadings[,1:2]"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "outputs": [],
+   "source": [
+    "summary(pca)"
+   ],
+   "metadata": {
+    "collapsed": false,
+    "pycharm": {
+     "name": "#%%\n"
+    }
+   }
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "43ddeae5",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<table class=\"dataframe\">\n",
+       "<caption>A matrix: 13 × 2 of type dbl</caption>\n",
+       "<thead>\n",
+       "\t<tr><th></th><th scope=col>Comp.1</th><th scope=col>Comp.2</th></tr>\n",
+       "</thead>\n",
+       "<tbody>\n",
+       "\t<tr><th scope=row>1인당 GNP</th><td>0.2814002</td><td> 0.23698294</td></tr>\n",
+       "\t<tr><th scope=row>총고정 자본형성</th><td>0.2787557</td><td> 0.28202643</td></tr>\n",
+       "\t<tr><th scope=row>무역총액</th><td>0.2842862</td><td> 0.10552370</td></tr>\n",
+       "\t<tr><th scope=row>수출</th><td>0.2825687</td><td> 0.07460935</td></tr>\n",
+       "\t<tr><th scope=row>수입</th><td>0.2841858</td><td> 0.13586014</td></tr>\n",
+       "\t<tr><th scope=row>전 산업 평균임금</th><td>0.2845221</td><td> 0.10358531</td></tr>\n",
+       "\t<tr><th scope=row>제조업 평균 임금</th><td>0.2833497</td><td> 0.16331318</td></tr>\n",
+       "\t<tr><th scope=row>건설업 평균임금</th><td>0.2834528</td><td> 0.02618889</td></tr>\n",
+       "\t<tr><th scope=row>전국도매물가지수</th><td>0.2521276</td><td>-0.63532121</td></tr>\n",
+       "\t<tr><th scope=row>전 도시 물가지수</th><td>0.2772792</td><td>-0.33083668</td></tr>\n",
+       "\t<tr><th scope=row>시멘트 생산량</th><td>0.2679007</td><td>-0.16465193</td></tr>\n",
+       "\t<tr><th scope=row>건축허가면적</th><td>0.2713171</td><td> 0.31196566</td></tr>\n",
+       "\t<tr><th scope=row>인구</th><td>0.2725119</td><td>-0.39183497</td></tr>\n",
+       "</tbody>\n",
+       "</table>\n"
+      ],
+      "text/latex": [
+       "A matrix: 13 × 2 of type dbl\n",
+       "\\begin{tabular}{r|ll}\n",
+       "  & Comp.1 & Comp.2\\\\\n",
+       "\\hline\n",
+       "\t1인당 GNP & 0.2814002 &  0.23698294\\\\\n",
+       "\t총고정 자본형성 & 0.2787557 &  0.28202643\\\\\n",
+       "\t무역총액 & 0.2842862 &  0.10552370\\\\\n",
+       "\t수출 & 0.2825687 &  0.07460935\\\\\n",
+       "\t수입 & 0.2841858 &  0.13586014\\\\\n",
+       "\t전 산업 평균임금 & 0.2845221 &  0.10358531\\\\\n",
+       "\t제조업 평균 임금 & 0.2833497 &  0.16331318\\\\\n",
+       "\t건설업 평균임금 & 0.2834528 &  0.02618889\\\\\n",
+       "\t전국도매물가지수 & 0.2521276 & -0.63532121\\\\\n",
+       "\t전 도시 물가지수 & 0.2772792 & -0.33083668\\\\\n",
+       "\t시멘트 생산량 & 0.2679007 & -0.16465193\\\\\n",
+       "\t건축허가면적 & 0.2713171 &  0.31196566\\\\\n",
+       "\t인구 & 0.2725119 & -0.39183497\\\\\n",
+       "\\end{tabular}\n"
+      ],
+      "text/markdown": [
+       "\n",
+       "A matrix: 13 × 2 of type dbl\n",
+       "\n",
+       "| <!--/--> | Comp.1 | Comp.2 |\n",
+       "|---|---|---|\n",
+       "| 1인당 GNP | 0.2814002 |  0.23698294 |\n",
+       "| 총고정 자본형성 | 0.2787557 |  0.28202643 |\n",
+       "| 무역총액 | 0.2842862 |  0.10552370 |\n",
+       "| 수출 | 0.2825687 |  0.07460935 |\n",
+       "| 수입 | 0.2841858 |  0.13586014 |\n",
+       "| 전 산업 평균임금 | 0.2845221 |  0.10358531 |\n",
+       "| 제조업 평균 임금 | 0.2833497 |  0.16331318 |\n",
+       "| 건설업 평균임금 | 0.2834528 |  0.02618889 |\n",
+       "| 전국도매물가지수 | 0.2521276 | -0.63532121 |\n",
+       "| 전 도시 물가지수 | 0.2772792 | -0.33083668 |\n",
+       "| 시멘트 생산량 | 0.2679007 | -0.16465193 |\n",
+       "| 건축허가면적 | 0.2713171 |  0.31196566 |\n",
+       "| 인구 | 0.2725119 | -0.39183497 |\n",
+       "\n"
+      ],
+      "text/plain": [
+       "                 Comp.1    Comp.2     \n",
+       "1인당 GNP        0.2814002  0.23698294\n",
+       "총고정 자본형성  0.2787557  0.28202643\n",
+       "무역총액         0.2842862  0.10552370\n",
+       "수출             0.2825687  0.07460935\n",
+       "수입             0.2841858  0.13586014\n",
+       "전 산업 평균임금 0.2845221  0.10358531\n",
+       "제조업 평균 임금 0.2833497  0.16331318\n",
+       "건설업 평균임금  0.2834528  0.02618889\n",
+       "전국도매물가지수 0.2521276 -0.63532121\n",
+       "전 도시 물가지수 0.2772792 -0.33083668\n",
+       "시멘트 생산량    0.2679007 -0.16465193\n",
+       "건축허가면적     0.2713171  0.31196566\n",
+       "인구             0.2725119 -0.39183497"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "a658a595",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Importance of components:\n",
+       "                          Comp.1     Comp.2      Comp.3      Comp.4      Comp.5\n",
+       "Standard deviation     3.4917875 0.72720664 0.359439140 0.276383824 0.216334686\n",
+       "Proportion of Variance 0.9378908 0.04067919 0.009938192 0.005876001 0.003600054\n",
+       "Cumulative Proportion  0.9378908 0.97856998 0.988508172 0.994384173 0.997984227\n",
+       "                            Comp.6       Comp.7       Comp.8       Comp.9\n",
+       "Standard deviation     0.102466951 0.0976215398 0.0616836100 0.0397676750\n",
+       "Proportion of Variance 0.000807652 0.0007330742 0.0002926821 0.0001216514\n",
+       "Cumulative Proportion  0.998791879 0.9995249531 0.9998176353 0.9999392866\n",
+       "                            Comp.10      Comp.11      Comp.12      Comp.13\n",
+       "Standard deviation     2.286007e-02 1.592195e-02 3.621328e-03 2.617038e-04\n",
+       "Proportion of Variance 4.019867e-05 1.950065e-05 1.008771e-06 5.268377e-09\n",
+       "Cumulative Proportion  9.999795e-01 9.999990e-01 1.000000e+00 1.000000e+00"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "summary(pca)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "eaf5f32a",
    "metadata": {},
    "outputs": [],
    "source": []
